--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,16 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
-    {% load static %}
     <html>
     <head>
         <title>Login</title>
-        <link rel = "stylesheet" href = {% static "css/login.css" %}
+        <link rel = "stylesheet" type="text/css" href = "{% static '/css/login.css' %}">
     </head>
     <body>
-        <h2>Login</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Login</button>
-        </form>
+        <div id="login_page">
+            <h2 class="login_title"> Login </h2>
+                <form method="post">
+
+
+                    <button type="submit">Login</button>
+                </form>
+        </div>
     </body>
 </html>
