--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-{% load static %}
 <html>
 <head>
     <title>Sign Up</title>
-    <link rel="stylesheet" href={% static "css/signup.css" %}
+    <link rel="stylesheet" type="text/css" href="/static/css/signup.css">
 </head>
 <body>
-    <h2>Sign Up</h2>
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
+        <div id="signup_form">
+            <h2 class="signup_title"> Sign Up </h2>
+
+
+        </div>
+
         <button type="submit">Sign Up</button>
     </form>
 </body>
