--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,18 +1,75 @@
 #login_page{
     top: 0;
-    height: 770px;
-    margin-top: 20px;
+    height: 560px;
+    margin-top: 11%;
     margin-left: 33%;
     width: 33%;
     background-color: antiquewhite;
     padding: 25px;
     position: fixed;
     border-radius: 23px;
-    align-items: center;
 }
 
 
 .login_title{
+    margin-top: 10px;
+    margin-bottom: 15%;
     text-align: center;
-    font-size: 30px;
+    font-size: 45px;
+    text-decoration: underline;
+}
+
+.uname_input , .pass_input{
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    border-bottom: 3px solid black;
+    padding: 10px;
+    font-size: 25px;
+    width: 80%;
+    margin-left: 8%;
+    background-color: antiquewhite;
+}
+
+.uname_input{
+    margin-top: 20px;
+}
+
+.pass_input{
+    margin-bottom: 20px;
+}
+
+.login_collection{
+    margin-bottom: 10px;
+}
+
+.forgot_pass{
+    margin-top: 25%;
+    margin-left: 8%;
+    font-size: 19px;
+}
+
+.pass_reset{
+    text-decoration: none;
+    font-size: 21px;
+}
+
+.signup_redirection{
+    font-size: 19px;
+    margin-left: 8%;
+}
+
+.signup_from_login{
+    font-size: 21px;
+    text-decoration: none;
+}
+
+.login_btn{
+    font-family: emoji;
+    padding: 10px 55px;
+    float: inline-end;
+    margin-right: 37%;
+    font-size: 20px;
+    border-radius: 23px;
+    cursor: pointer;
 }
